# CsiFeedback

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.py
archive/: README_DEPRECATED.md
archive/CLNet/: README.md  evaluate_local.py
archive/CsiNet/: csinet_pytorch.py
archive/STNet/: stnet_fixed.py
csifeedback/: __init__.py
csifeedback/configs/: clnet_indoor_cr16.yaml  clnet_indoor_cr32.yaml  clnet_indoor_cr4.yaml  clnet_indoor_cr64.yaml  clnet_indoor_cr8.yaml  clnet_outdoor_cr16.yaml  clnet_outdoor_cr32.yaml  clnet_outdoor_cr4.yaml  clnet_outdoor_cr64.yaml  clnet_outdoor_cr8.yaml  csinet_indoor_cr16.yaml  csinet_indoor_cr32.yaml  csinet_indoor_cr4.yaml  csinet_indoor_cr64.yaml  csinet_indoor_cr8.yaml  csinet_outdoor_cr16.yaml  csinet_outdoor_cr32.yaml  csinet_outdoor_cr4.yaml  csinet_outdoor_cr64.yaml  csinet_outdoor_cr8.yaml  stnet_indoor_cr16.yaml  stnet_indoor_cr32.yaml  stnet_indoor_cr4.yaml  stnet_indoor_cr64.yaml  stnet_indoor_cr8.yaml  stnet_outdoor_cr16.yaml  stnet_outdoor_cr32.yaml  stnet_outdoor_cr4.yaml  stnet_outdoor_cr64.yaml  stnet_outdoor_cr8.yaml
csifeedback/data/: cost2100.py
csifeedback/metrics/: csi_metrics.py
csifeedback/models/: __init__.py  base.py  clnet.py  csinet.py  stnet.py
csifeedback/trainers/: __init__.py  base.py  clnet.py  csinet.py  stnet.py
csifeedback/utils/: checkpoint.py  config.py  device.py  logging.py  (+1 more)
docs/: architecture.md  migration.md
scripts/: evaluate.py  train.py  train_all.py
tests/: conftest.py  test_configs.py  test_data.py  test_metrics.py  test_models.py  test_overfit.py
(+1 files in other folders)
